<resources>
    <string name="app_name">AutoService</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_login">Введите логин</string>
    <string name="write_password">Введите пароль</string>
    <string name="login">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="to_Registration">Зарегистрироваться</string>
    <string name="come_up_with_password">Придумайте пароль</string>
    <string name="come_up_with_login">Придумайте логин</string>
    <string name="Service">Услуги</string>
    <string name="write_message">Написать сообщение…</string>
    <string name="maxiservice">MaxiService - это современный автосервис, специализирующийся на качественном обслуживании и ремонте автомобилей всех марок. Наши опытные мастера обладают профессиональными навыками и всегда готовы предложить свои услуги по доступным ценам. Мы работаем быстро и качественно, чтобы каждый клиент мог быть уверен в надежности своего транспортного средства. Доверьте нам заботу о вашем авто, и мы сделаем все возможное для его надежной работы и долгого срока службы.</string>
    <string name="save_report">Оставьте отзыв</string>
    <string name="send">Отправить</string>
    <string name="back">Назад</string>
    <string name="report_null">Отзывов нету</string>
    <string name="do_you_wont">Вы действительно хотите приобрести услугу?</string>
    <string name="accept">Подтверждение</string>
    <string name="Yea">Да</string>
    <string name="your_services">Ваши заказы</string>
    <string name="main">Главная</string>
    <string name="service">Услуги</string>
    <string name="adout_company">О компании</string>
    <string name="support">Поддержка</string>
    <string name="hi_what_heppend">Здравствуйте, чем мы можем помочь?</string>
    <string name="diagnostic">Диагностика</string>
</resources>